--- a/LeMiniMiniProject.csproj
+++ b/LeMiniMiniProject.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.10" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\" />
+    <Folder Include="Pages\" />
+  </ItemGroup>
+
 </Project>
